--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,14 +1,19 @@
 .product {
     width: 300px;
     height: 510px;
+    border: 1px solid brown;
+    border-radius: 8px;
+    margin-bottom: 15px;
+
 }
 
 .product img {
     width: 286px;
     height: 286px;
+    border-radius: 8px;
 }
 
 .productName {
-    font-family: 'lato';
+    font-family: lato;
     font-size: 21px;
 }
